--- a/style.css
+++ b/style.css
@@ -1,93 +1,60 @@
 body {
     margin: 0px auto;
-    background-color: hsl(0, 0%, 100%);
-    font-family: 'Monda', sans-serif;
+    background-image: url(image/background.jpg);
+    background-repeat: no-repeat;
+    background-position: inherit;
 }
 
 header {
     width: 100%;
     height: 80px;
-    position: fixed;
-    top: 0px;
-    text-align: center;
-    border-bottom: 4px solid #301614;
-    background-color: hsl(0, 0%, 100%);
-    z-index: 999999;
+}
+
+header img {
+    margin: 15px 15px 15px 45px;
+    display: block;
+    float: left;
 }
 
 header h1 {
-    letter-spacing: 2px;
-    margin-bottom: 0px;
-    margin-top: 10px;
-    font-weight: 700;
-    font-size: 30px;
+    font-size: 25px;
+    font-weight: normal ;
+    float: left;
+    margin-left: 5px;
+    margin-top: 30px;
+  
 }
 
-main {
-    margin-top: 150px;
-    position: relative;
-    width: 100%;
+header ul li {
+    display: inline-block;
+    margin-top: 35px;
+    font-size: 25px;
+    float: right;
+    margin-right: 20px ;
+    padding-right: 20px;
 }
 
-.separator {
-    width: 1100px;
-    height: 500px;
-    border: 10px thick black;
-    margin: auto;
-    
+a {
+    color: black;
+}
+
+a:hover {
+    color: gray;
 }
 
 .box-content {
-    width: 400px;
-    height: 400px;
-    border: 1px solid black;
-    float: left;
-    position: relative;
-    box-shadow: 50px red;
+    width: 150px;
+    height: 150px;
+    margin: auto;
 }
     
 #box-1 {
-    margin-left: 120px;
+    
     margin-top: 50px;
-    background-image: url(./image/image1.jpg);
-}
-#box-2 {
-    margin-left: 50px;
-    margin-top: 50px;
-    background-image: url(./image/imaage3.jpg);
-}
-#box-3 {
-    margin-left: 120px;
-    margin-top: 50px;
-    background-image: url(./image/image2.jpg)
-}
-#box-4 {
-    margin-left: 50px;
-    margin-top: 50px;
-    background-image: url(./image/image4.jpg);
-}
-#box-5 {
-    margin-left: 120px;
-    margin-top: 50px;
-    background-image: url(./image/image5.jpg);
-}
-#box-6 {
-    margin-left: 50px;
-    margin-top: 50px;
-    background-image: url(./image/image6.jpg);
+ 
 }
 
-footer {
-    width: 100%;
-    height: 60px;
-    text-align: center;
-    margin-top: 50px;
-    border-top: 4px solid #301614;
-}
-
-footer h3 {
-    padding: 0px;
-    font-weight: 700;
-    font-size: 30px;
-    margin: 13px 0px;
+main center {
+    font-size: 40px;
+    margin-top: 130px;
 }
