--- a/styleportfolio.css
+++ b/styleportfolio.css
@@ -19,7 +19,6 @@ body {
 p {
     font-family: 'IM Fell French Canon SC', serif;
     font-size: 20px;
-    text-align: center;
     color: white;
 }
 
@@ -27,7 +26,17 @@ p {
     width: 900px;
     height: 150px;
     margin: auto;
-    margin-top: 110px;
+    margin-top: 130px;
+    text-align: center;
+}
+
+.box1 {
+    width: 900px;
+    height: 90px;
+    margin: auto;
+    margin-top: 60px;
+    text-align: center;
+    padding-bottom: 35px;
 }
 
 button {
