--- a/styleportfolio.css
+++ b/styleportfolio.css
@@ -23,16 +23,17 @@ p {
 }
 
 .box {
-    width: 900px;
-    height: 150px;
+    max-width: 900px;
+    min-height: 150px;
     margin: auto;
     margin-top: 130px;
     text-align: center;
+    word-break: break-all;
 }
 
 .box1 {
-    width: 900px;
-    height: 90px;
+    max-width: 900px;
+    min-height: 90px;
     margin: auto;
     margin-top: 60px;
     text-align: center;
